--- a/Sponsor/style.css
+++ b/Sponsor/style.css
@@ -8,6 +8,7 @@ body {
   height: 100%;
   min-height: 100%;
   font-family: "roboto", "Times New Roman", Times, serif;
+  overflow-y: hidden;
 }
 
 body {
@@ -127,6 +128,7 @@ button > h5 {
   justify-content: center;
   align-items: center;
   font-size: 2rem;
+  background-color: white;
 }
 
 .card:hover,
@@ -156,6 +158,7 @@ button > h5 {
   height: 300px;
   border-radius: 15px;
   pointer-events: none;
+  object-fit: contain;
 }
 
 .modal_inner_container {
